--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <link rel="stylesheet" href="styles/base-styles.css">
 
         <!-- Get user client type (Desktop or Mobile) -->
-        <script src="scripts/detect_device.ts"></script>
+        <script src="scripts/detect_device.js"></script>
 
         <!-- Defines some characters like symbols-->
-        <script src="scripts/character_definitions.ts"></script>
+        <script src="scripts/character_definitions.js"></script>
 
         <!-- Functions to check characters -->
-        <script src="scripts/specific-checks.ts"></script>
+        <script src="scripts/specific-checks.js"></script>
 
         <!-- Page details -->
         <title>Character Inspector</title>
