Added Word Summary

--- a/index.html
+++ b/index.html
@@ -128,18 +128,28 @@
                 </div>
 
                 <!-- Word Summary Card-->
-                <!-- TODO
-                <div class="card summary-card">
-                    <h2 class="card-summary-h2">Word Summary:</h2>
+                <div class="card summary-card" id="word-summary-card">
+                    <h2 class="card-summary-h2">Text Summary:</h2>
 
                     <table id="word-summary-table">
+                        <!-- Word Count Row -->
                         <tr id="word-count-row">
                             <th>Word Count:</th>
                             <td id="word-count-display"></td>
                         </tr>
+                        <!-- Sentence Count Row -->
+                        <tr id="sentence-count-row">
+                            <th>Sentence Count:</th>
+                            <td id="sentence-count-display"></td>
+                        </tr>
+                        <!-- Paragraph Count Row -->
+                        <tr id="paragraph-count-row">
+                            <th>Paragraph Count:</th>
+                            <td id="paragraph-count-display"></td>
+                        </tr>                        
                     </table>
                 </div>
-                -->
+            </div>
         </div>
 
         <!-- Handle text input into textarea -->
