Added count per character and colors

--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
                         </tr>                                                         
                     </table>
                 </div>
+                
+                <!-- Character rankings -->
+                <div class="card summary-card">
+                    <h2 class="card-summary-h2">Count per character:</h2>
+
+                    <table>
+                        <thead>
+                            <th class="char-count-table-head char-count-table-rank">#</th>
+                            <th class="char-count-table-head char-count-table-char">Char</th>
+                            <th class="char-count-table-head char-count-table-unicode">Unicode</th>
+                            <th class="char-count-table-head char-count-table-type">Type</th>
+                            <th class="char-count-table-head char-count-table-count">Count</th>
+                        </thead>
+
+                        <tbody id="character-count-table-body"></tbody>
+                    </table>
+                </div>
             </div>
 
             <!-- Start of Characters Display -->
